adjust for compiling